log
Wed, Apr 16, 2025  8:48:57 AM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         nuevoMapa->current = NULL;
                            ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:52:57 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         nuevoMapa->current = NULL;
                            ^
cc1.exe: all warnings being treated as errors
3d09577
Wed, Apr 16, 2025  8:53:04 AM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
8052a82
Wed, Apr 16, 2025  8:55:58 AM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
e162143
Wed, Apr 16, 2025  8:58:18 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
21b9134
Wed, Apr 16, 2025  9:06:48 AM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe82c89
Wed, Apr 16, 2025  9:13:03 AM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
e451699
Sun, Apr 20, 2025  1:31:54 AM: 
 hashmap.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
f4e72a2
Sun, Apr 20, 2025  1:49:48 AM: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 30/70
bdce0de
Sun, Apr 20, 2025  1:52:42 AM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
be26061
Sun, Apr 20, 2025  1:54:13 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
a05bc74
